; ModuleID = '/home/carl/AnghaBench/openpilot/panda/board/pedal/extr_main.c_pedal.c'
source_filename = "/home/carl/AnghaBench/openpilot/panda/board/pedal/extr_main.c_pedal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ADCCHAN_ACCEL0 = common dso_local global i32 0, align 4
@pdl0 = common dso_local global i32 0, align 4
@ADCCHAN_ACCEL1 = common dso_local global i32 0, align 4
@pdl1 = common dso_local global i32 0, align 4
@state = common dso_local global i64 0, align 8
@NO_FAULT = common dso_local global i64 0, align 8
@gas_set_0 = common dso_local global i32 0, align 4
@gas_set_1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pedal() #0 {
  %1 = load i32, i32* @ADCCHAN_ACCEL0, align 4
  %2 = call i32 @adc_get(i32 %1)
  store i32 %2, i32* @pdl0, align 4
  %3 = load i32, i32* @ADCCHAN_ACCEL1, align 4
  %4 = call i32 @adc_get(i32 %3)
  store i32 %4, i32* @pdl1, align 4
  %5 = load i64, i64* @state, align 8
  %6 = load i64, i64* @NO_FAULT, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %17

8:                                                ; preds = %0
  %9 = load i32, i32* @gas_set_0, align 4
  %10 = load i32, i32* @pdl0, align 4
  %11 = call i32 @MAX(i32 %9, i32 %10)
  %12 = call i32 @dac_set(i32 0, i32 %11)
  %13 = load i32, i32* @gas_set_1, align 4
  %14 = load i32, i32* @pdl1, align 4
  %15 = call i32 @MAX(i32 %13, i32 %14)
  %16 = call i32 @dac_set(i32 1, i32 %15)
  br label %22

17:                                               ; preds = %0
  %18 = load i32, i32* @pdl0, align 4
  %19 = call i32 @dac_set(i32 0, i32 %18)
  %20 = load i32, i32* @pdl1, align 4
  %21 = call i32 @dac_set(i32 1, i32 %20)
  br label %22

22:                                               ; preds = %17, %8
  %23 = call i32 (...) @watchdog_feed()
  ret void
}

declare dso_local i32 @adc_get(i32) #1

declare dso_local i32 @dac_set(i32, i32) #1

declare dso_local i32 @MAX(i32, i32) #1

declare dso_local i32 @watchdog_feed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
